--- a/db/Dockerfile
+++ b/db/Dockerfile
@@ -1,7 +1,8 @@
 FROM postgres:13
 
 ENV POSTGRES_USER=postgres
-ENV POSTGRES_PASSWORD=postgres
-ENV POSTGRES_DB=fishery
+ENV POSTGRES_PASSWORD=unatco001
+ENV POSTGRES_MULTIPLE_DATABASES=fishery,pact_broker
 
-COPY ./init.sql /docker-entrypoint-initdb.d/ 
+COPY 01-check_and_create_db.sh /docker-entrypoint-initdb.d/
+COPY 02-init.sql /docker-entrypoint-initdb.d/ 
