--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ services:
       - /app/node_modules
     environment:
       - NODE_ENV=development
-      - REACT_APP_API_URL=http://localhost:5000
+      - REACT_APP_FISHERY_API_URL=http://localhost:8000
+      - REACT_APP_UAV_API_URL=http://localhost:8001
     depends_on:
       fishery:
         condition: service_healthy
@@ -24,39 +25,41 @@ services:
       context: ./server/apps/fishery
       dockerfile: Dockerfile
     ports:
-      - "5000:5000"
+      - "8000:8000"
     volumes:
       - ./server/apps/fishery:/app
       - ./server/apps/fishery/data:/app/data
     environment:
       - ENVIRONMENT=development
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/fishery
+      - DATABASE_URL=postgresql://postgres:unatco001@db:5432/fishery
+      - PYTHONPATH=/app
     depends_on:
       db:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:8000/api/fishery/health"]
       interval: 30s
       timeout: 10s
       retries: 3
-      start_period: 40s
+      start_period: 60s
 
   uav:
     build:
       context: ./server/apps/uav
       dockerfile: Dockerfile
     ports:
-      - "5001:5001"
+      - "8001:8001"
     volumes:
       - ./server/apps/uav:/app
     environment:
       - ENVIRONMENT=development
-      - DATABASE_URL=postgresql://postgres:postgres@db:5432/uav
+      - DATABASE_URL=postgresql://postgres:unatco001@db:5432/uav
+      - PYTHONPATH=/app
     depends_on:
       db:
         condition: service_healthy
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:5001/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:5001/api/uav/health"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -89,7 +92,7 @@ services:
     ports:
       - "9292:9292"
     environment:
-      - PACT_BROKER_DATABASE_URL=postgresql://postgres:postgres@db:5432/pact_broker
+      - PACT_BROKER_DATABASE_URL=postgresql://postgres:unatco001@db:5432/pact_broker
     depends_on:
       db:
         condition: service_healthy
@@ -102,10 +105,12 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./db/01-check_and_create_db.sh:/docker-entrypoint-initdb.d/01-check_and_create_db.sh
+      - ./db/02-init.sql:/docker-entrypoint-initdb.d/02-init.sql
     environment:
       - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=fishery
+      - POSTGRES_PASSWORD=unatco001
+      - POSTGRES_MULTIPLE_DATABASES=fishery,pact_broker
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
