--- a/server/apps/client/package.json
+++ b/server/apps/client/package.json
@@ -1,33 +1,27 @@
 {
-  "name": "fish-simulation-frontend",
+  "name": "client",
   "version": "1.0.0",
-  "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^5.17.1",
-    "@mui/material": "^5.17.1",
-    "axios": "^1.1.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-qr-code": "^2.0.11",
-    "react-qr-reader": "^3.0.0-beta-1",
-    "react-scripts": "5.0.1",
-    "react-three-fiber": "^6.0.13",
-    "socket.io-client": "^4.5.2",
-    "three": "^0.146.0"
-  },
+  "description": "Client for the Fishery and UAV Dashboard",
+  "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "test:e2e": "playwright test",
+    "test:debug": "playwright test --debug"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "dependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "5.0.1",
+    "axios": "^1.3.4"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.42.1",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "typescript": "^4.9.5"
   },
   "browserslist": {
     "production": [
