--- a/server/apps/fishery/Dockerfile
+++ b/server/apps/fishery/Dockerfile
@@ -2,11 +2,13 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
+RUN apt-get update && apt-get install -y curl && rm -rf /var/lib/apt/lists/*
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-WORKDIR /app/src
+ENV PYTHONPATH=/app
 
-CMD ["uvicorn", "api:app", "--host", "0.0.0.0", "--port", "5000"] 
+CMD ["uvicorn", "src.api:app", "--host", "0.0.0.0", "--port", "8000"] 
